crates/pina_cli/tests/snapshots/cli_snapshots__test_help.snap
---
source: crates/pina_cli/tests/cli_snapshots.rs
info:
  program: pina
  args:
    - test
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Test a Pina program with fast native tests or an isolated Surfpool instance.

The default workflow builds the actual SBF shared object, verifies that it exists, and runs the project's isolated `tests/surfpool` test package. That package owns an embedded Surfpool instance, so parallel runs use separate ports and teardown remains deterministic. Use --unit for native Rust and Mollusk tests only. Use --record-compute-units to measure every instruction for the compute unit limits generated clients request.

Usage: pina test [OPTIONS]

Options:
  -p, --project <DIR>
          Project directory or a directory below it. Defaults to the current directory

      --unit
          Run native Rust and Mollusk tests without building SBF or starting Surfpool

      --compatibility
          Verify migration history, then expose historical fixtures to the complete Surfpool suite

  -f, --filter <FILTER>
          Run only tests whose names contain FILTER

      --record-compute-units
          Measure every instruction in the complete Surfpool suite and write compute-units.json

  -h, --help
          Print help (see a summary with '-h')

Examples:
  pina test
  pina test --filter initialize
  pina test --unit
  pina test --compatibility
  pina test --record-compute-units
  pina test --unit --filter rejects_wrong_owner

Test layers:
  --unit keeps the fast native/Mollusk loop and does not build SBF.
  The default builds SBF and runs the ignored test in the isolated `tests/surfpool` package.

Compute units:
  --record-compute-units runs the complete Surfpool suite and writes compute-units.json beside Cargo.toml: the most compute units each instruction consumed in a successful simulation. `pina generate` turns each measurement into the limit clients request, adding [compute_units] margin_percent (default 20) and the compute budget instructions' cost. Commit the file with the clients it produced.

Safety:
  Embedded Surfpool tests allocate isolated ports and must stop their instance before returning. Missing SBF artifacts and incomplete Surfpool test packages are hard failures.

----- stderr -----
